--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "react-select": "^5.10.2",
     "recharts": "^2.15.4",
     "tailwindcss": "^3.4.17"
   },
